--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-488.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-10.21MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 未知国家-3.41MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇨🇳 中国-259.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇫🇷 法国-2.21MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-219.9KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20718, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.95MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.28MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-733.9KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20724, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
   - {name: 🇨🇳 中国-7.91MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40202, type: trojan, password: a04f6f85-18a7-3f41-8389-663ebae403cf, sni: trojan.linkdns.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.61MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.56MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-488.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.21MB/s(Youtube:不良林)
+      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-219.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-488.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.21MB/s(Youtube:不良林)
+      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-219.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-488.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.21MB/s(Youtube:不良林)
+      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-219.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-488.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.21MB/s(Youtube:不良林)
+      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-219.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-488.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.21MB/s(Youtube:不良林)
+      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-219.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-488.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.21MB/s(Youtube:不良林)
+      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-219.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-488.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.21MB/s(Youtube:不良林)
+      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-219.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.91MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
