--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-352.1KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-7.45MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20725, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-279.6KB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-664.5KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-561.4KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20719, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇺🇸 美国-9.74MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-357.2KB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
-  - {name: 🇺🇸 美国-707.7KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: 46ceba76-28b9-37df-8b08-b288e75aa646, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-10.04MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40202, type: trojan, password: a04f6f85-18a7-3f41-8389-663ebae403cf, sni: trojan.linkdns.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-829.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-3.54MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-279.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-561.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇫🇷 法国-829.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-279.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-561.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇫🇷 法国-829.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-279.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-561.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇫🇷 法国-829.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-279.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-561.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇫🇷 法国-829.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-279.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-561.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇫🇷 法国-829.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-279.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-561.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇫🇷 法国-829.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-279.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-561.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
       - 🇫🇷 法国-829.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
